# wizrpc

./: .gitignore  Cargo.toml  readme.md
src/: error.rs  errors.rs  lib.rs  model.rs  networking.rs  tests.rs
