[package]
name = "wizrpc"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "[WIP] Rust support for the JSON-RPC variant used by the local network interface to control WizConnected devices"
homepage = "https://github.com/aordano/wizrpc"
documentation = "https://github.com/aordano/wizrpc"
repository = "https://github.com/aordano/wizrpc"
readme = "readme.md"


[dependencies]
lazy_static = "1.4.0"
mac_address = "1.1.4"
macaddr = { version = "1.0.1", features = ["serde_std"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["raw_value"] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"
tracing = "0.1.37"
rand = "0.8.5"
tokio = { version = "1.22.0", features = ["net"] }
dns-lookup = "1.0.8"
qscan = "0.6.0"
url = "2.3.1"
