[package]
name = "wizrpc"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "[WIP] Rust support for the JSON-RPC variant used by the local network interface to control WizConnected devices"
homepage = "https://github.com/aordano/wizrpc"
documentation = "https://github.com/aordano/wizrpc"
repository = "https://github.com/aordano/wizrpc"
readme = "readme.md"


[dependencies]
lazy_static = "1.4.0"
macaddr = { version = "1.0.1", features = ["serde_std"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["raw_value"] }
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.37"
rand = "0.8.5"
tokio = { version = "1.22.0", features = [
    "net",
    "rt",
    "macros",
    "sync",
    "time",
] }
tokio-test = "0.4.2"
local-ip-address = "0.5.1"
retry = "2.0.0"
optional_struct = "0.3.1"
field_types = "1.1.0"
uuid = { version = "1.2.2", features = ["v1", "rng", "std"] }
debug-helper = "0.3.13"
surge-ping = "0.8.0"
serial_test = "2.0.0"
